[package]
name = "cdumay_error_json"
version = "0.1.3"
edition = "2024"
authors = ["Cédric Dumay <cedric.dumay@gmail.com>"]
description = "A Rust Library for JSON error"
documentation = "https://docs.rs/cdumay_error_json"
homepage = "https://github.com/cdumay/cdumay_error_json"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/cdumay/cdumay_error_json"

[dependencies]
serde_json = "1.0"
cdumay_error = { version = "1.0", features = ["derive"] }
serde-value = "0.7"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
